# Enki

./: .clang-format  .gitignore  .travis.yml  .travis.yml.orig  CMakeLists.txt  LICENSE  README.md
cmake/: FilesystemSourceGroup.cmake  PostTargetSettings.cmake  PostTargetSettings.cmake.orig  PreTargetSettings.cmake  Settings.cmake
demos/: CMakeLists.txt
demos/Asteroids/: CMakeLists.txt  imgui.ini  main.cpp
demos/Asteroids/src/: Asteroid.cpp  Asteroid.hpp  Bullet.cpp  Bullet.hpp  CollisionManager.cpp  CollisionManager.hpp  CustomData.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  PlayerText.cpp  PlayerText.hpp  main.cpp
demos/Asteroids/src/Managers/: InputManager.cpp  InputManager.hpp
demos/Pong/: CMakeLists.txt
demos/Pong/src/: Ball.cpp  Ball.hpp  Collision.cpp  Collision.hpp  Game.cpp  Game.hpp  Paddle.cpp  Paddle.hpp  PlayerText.cpp  PlayerText.hpp  Score.cpp  Score.hpp  main.cpp
demos/Shooter/: CMakeLists.txt
demos/Shooter/src/: CustomData.hpp  Floor.cpp  Floor.hpp  Game.cpp  Game.hpp  HealthSpawner.cpp  HealthSpawner.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp  main.cpp
demos/Shooter/src/Managers/: MapManager.cpp  MapManager.hpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
src/: CMakeLists.txt  RNG.hpp
src/Enki/: AnimatedSprite.cpp  AnimatedSprite.hpp  Entity.hpp  GameData.hpp  Hash.hpp  MustMove.hpp  NonCopyable.hpp  RNG.cpp  RNG.hpp  Renderer.cpp  Renderer.hpp  Scenegraph.cpp  Scenegraph.hpp  Scenegraph2.cpp  Scenetree.cpp  Scenetree.hpp  Timer.cpp  Timer.hpp  TimerLog.cpp  TimerLog.hpp  TimerTrigger.cpp  TimerTrigger.hpp
src/Enki/GUI/: Console.cpp  Console.hpp  ScenetreeGUI.cpp  ScenetreeGUI.hpp
src/Enki/GUI/IMGUI/: imconfig.h  imgui_SFML.cpp  imgui_SFML.h
src/Enki/Graphics/: Colour.hpp  Font.hpp  FontLog.cpp  FontLog.hpp  FontNone.cpp  FontNone.hpp  FontSFML.cpp  FontSFML.hpp  Sprite.hpp  SpriteLog.cpp  SpriteLog.hpp  SpriteNone.cpp  SpriteNone.hpp  SpriteSFML.cpp  SpriteSFML.hpp  Text.hpp  TextLog.cpp  TextLog.hpp  TextNone.cpp  TextNone.hpp  TextSFML.cpp  TextSFML.hpp  Texture.hpp  TextureLog.cpp  TextureLog.hpp  TextureNone.cpp  TextureNone.hpp  TextureSFML.cpp  TextureSFML.hpp  Vector2.hpp
src/Enki/Input/: Events.hpp  Keys.cpp  Keys.hpp
src/Enki/Input/SFML/: KeyConversion.cpp  KeyConversion.hpp
src/Enki/Managers/: FontManager.cpp  FontManager.hpp  InputManager.cpp  InputManager.hpp  NetworkManager.cpp  NetworkManager.hpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  TextureManager.hpp
src/Enki/Messages/: Message.hpp  MessageFunction.hpp  MessageQueue.cpp  MessageQueue.hpp
src/Enki/Networking/: Client.cpp  Client.hpp  ClientHost.cpp  ClientHost.hpp  ClientStandard.cpp  ClientStandard.hpp  Packet.cpp  Packet.hpp  RPC.hpp  RPCManager.cpp  RPCManager.hpp  Server.cpp  Server.hpp  ServerHost.cpp  ServerHost.hpp  ServerStandard.cpp  ServerStandard.hpp
src/Enki/Renderer/: Renderer.hpp  RendererLog.cpp  RendererLog.hpp  RendererNone.cpp  RendererNone.hpp  RendererSFML.cpp  RendererSFML.hpp
src/Enki/Signals/: Connection.cpp  Connection.hpp  Disconnector.hpp  Signal.hpp  Slot.hpp
src/Enki/Window/: Window.hpp  WindowLog.cpp  WindowLog.hpp  WindowNone.cpp  WindowNone.hpp  WindowSFML.cpp  WindowSFML.hpp
tests/: Benchmark.hpp  CMakeLists.txt  PacketTest.hpp  RPCTest.hpp  main.cpp
